dataset1235/2025-2/805158916/users/2004009724/executions/1584167357_2403290319.log
== SUBMISSION (2025-08-27 14:18:30)
-- CODE: 
preco = float(input("preco do produto;"))
quantidade = int(input("Qusntidade desejada;"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto;Qusntidade desejada;2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto;Qusntidade desejada;55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto;Qusntidade desejada;76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto;Qusntidade desejada;40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto;Qusntidade desejada;123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto;Qusntidade desejada;91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:18:40)
-- CODE: 
preco = float(input("preco do produto; "))
quantidade = int(input("Qusntidade desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto; Qusntidade desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto; Qusntidade desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto; Qusntidade desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto; Qusntidade desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto; Qusntidade desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto; Qusntidade desejada; 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:18:28)
-- CODE: 
preco = float(input("preco do produto;"))
quantidade = int(input("Qusntidade desejada;"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto;Qusntidade desejada;2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto;Qusntidade desejada;55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto;Qusntidade desejada;76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto;Qusntidade desejada;40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto;Qusntidade desejada;123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto;Qusntidade desejada;91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:19:21)
-- CODE: 
preco = float(input("preco do produto; "))
quantidade = int(input("Quantidade desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto; Quantidade desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto; Quantidade desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto; Quantidade desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto; Quantidade desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto; Quantidade desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto; Quantidade desejada; 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:59)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:19)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco preco_unitario * quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:19)
-- CODE: 
preco = float(input("preco do produto; "))
quantidade = int(input("Quantidade desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto; Quantidade desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto; Quantidade desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto; Quantidade desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto; Quantidade desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto; Quantidade desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto; Quantidade desejada; 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:23:18)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco preco_unitario * quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 3
    valor_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:20:32)
-- CODE: 
preco = float(input("Preco do Produto: "))
quantidade = int(input("Quantidade Desejada: "))
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto: Quantidade Desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto: Quantidade Desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto: Quantidade Desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto: Quantidade Desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto: Quantidade Desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto: Quantidade Desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:20:26)
-- CODE: 
preco = float(input("Preco do Produto: "))
quantidade = int(input("Quantidade Desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto: Quantidade Desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto: Quantidade Desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto: Quantidade Desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto: Quantidade Desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto: Quantidade Desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto: Quantidade Desejada: 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:27)
-- CODE: 
preco = float(input("Preco do Produto: "))
quantidade = int(input("Quantidade Desejada: "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto: Quantidade Desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto: Quantidade Desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto: Quantidade Desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto: Quantidade Desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto: Quantidade Desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto: Quantidade Desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:22:51)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
custo_total = preco preco_unitario * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:34)
-- CODE: 
preco = float(input("Preco do Produto: "))
quantidade = int(input("Quantidade Desejada: "))
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto: Quantidade Desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto: Quantidade Desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto: Quantidade Desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto: Quantidade Desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto: Quantidade Desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto: Quantidade Desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:38)
-- CODE: 
preco = float(input("preco do produto; "))
quantidade = int(input("Qusntidade desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto; Qusntidade desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto; Qusntidade desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto; Qusntidade desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto; Qusntidade desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto; Qusntidade desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto; Qusntidade desejada; 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:22:52)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
custo_total = preco preco_unitario * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 3
    custo_total = preco preco_unitario * quantidade  
                        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:19:48)
-- CODE: 
preco = float(input("Preco do Produto; "))
quantidade = int(input("Quantidade Desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto; Quantidade Desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto; Quantidade Desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto; Quantidade Desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto; Quantidade Desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto; Quantidade Desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto; Quantidade Desejada; 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:23:58)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade  
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:18:40)
-- CODE: 
preco = float(input("preco do produto; "))
quantidade = int(input("Qusntidade desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
preco do produto; Qusntidade desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
preco do produto; Qusntidade desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
preco do produto; Qusntidade desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
preco do produto; Qusntidade desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
preco do produto; Qusntidade desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
preco do produto; Qusntidade desejada; 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:33)
-- CODE: 
preco = float(input("Preco do Produto: "))
quantidade = int(input("Quantidade Desejada: "))
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto: Quantidade Desejada: 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto: Quantidade Desejada: 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto: Quantidade Desejada: 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto: Quantidade Desejada: 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto: Quantidade Desejada: 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto: Quantidade Desejada: 91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:47)
-- CODE: 
preco = float(input("Preco do Produto; "))
quantidade = int(input("Quantidade Desejada; "))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Preco do Produto; Quantidade Desejada; 2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Preco do Produto; Quantidade Desejada; 55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Preco do Produto; Quantidade Desejada; 76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Preco do Produto; Quantidade Desejada; 40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Preco do Produto; Quantidade Desejada; 123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Preco do Produto; Quantidade Desejada; 91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
